--- a/estructura de archivos/public/css/profileUpdate.css
+++ b/estructura de archivos/public/css/profileUpdate.css
@@ -36,6 +36,31 @@
     display: none;
 }
 
+/** BODY | SELECT | ADDRESS  */
+
+.body__form__selects__userData--select select {
+    width: 225px;
+    height: 50px;
+    color: var(--C_Ice-Cream);
+    background-color: transparent;
+    outline: none;
+    border: none;
+    border-bottom: 2px solid;
+    border-image: linear-gradient(to right, var(--C_Lightblue_Logo), var(--C_Pink_Logo)) 1;
+    padding-left: 5px;
+    padding-top: 15px;
+    transition: 1s all;
+    font-family: 'Open Sans', sans-serif;
+}
+
+.body__form__selects__userData--select option {
+    font-family: 'Open Sans', sans-serif;
+    background-color: var(--C_Light_Dark);
+}
+.body__form__selects__userData--select select:hover {
+    border-image: linear-gradient(to left, var(--C_Lightblue_Logo), var(--C_Pink_Logo)) 1;
+}
+
 /** BODY | INPUTS | TEXTAREA */
 
 .body__form__inputs__userData__input--textArea {
