--- a/estructura de archivos/src/views/users/login.ejs
+++ b/estructura de archivos/src/views/users/login.ejs
@@ -21,7 +21,7 @@
                             <div class="body__form__inputs__userData--input">
                                 <label for="password">Contraseña:</label>
                                 <input type="password" placeholder="Contraseña" id="password" name="password">
-                                <i class="fa-regular fa-eye-slash" id="togglePass"></i>
+                                <i class="form__passToggler fa-regular fa-eye-slash" id="togglePass"></i>
                                 <p class="inputs__text__warnings"><%= locals.errors && errors.password ? errors.password.msg : null %></p>
                             </div>
                         </div>
