--- a/estructura de archivos/src/views/users/login.ejs
+++ b/estructura de archivos/src/views/users/login.ejs
@@ -40,7 +40,8 @@
                                 <input type="checkbox" id="remember" name="remember">
                             </div>
                             <div class="body__form__button--btn">
-                                <button type="submit" id="submit">INGRESAR</button>
+                                <button type="submit">INGRESAR</button>
+                                <p id="msgError" class="inputs__text__warnings--submit"></p>
                             </div>
                         </div>
                     </form>
