--- a/estructura de archivos/src/views/partials/head.ejs
+++ b/estructura de archivos/src/views/partials/head.ejs
@@ -8,6 +8,6 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link href="/css/styles.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="/css/glider.css">
-    <link rel="icon" href="/images/DALF-LOGO.png">
+    <link rel="icon" href="/images/icon/dalficon.png">
     <script src="https://kit.fontawesome.com/b23760bec1.js" crossorigin="anonymous"></script>
 </head>
