--- a/estructura de archivos/src/views/products/productsLoad.ejs
+++ b/estructura de archivos/src/views/products/productsLoad.ejs
@@ -100,6 +100,7 @@
                         <div class="form-box buttons">
                             <button class="total-comprar" type="reset">Cancelar</button>
                             <button class="total-comprar" type="submit">Agregar</button>
+                            <p id="msgError" class="text-danger" ></p>
                         </div>
                     </form>
                 </div>
